--- a/index.html
+++ b/index.html
@@ -1,16 +1,77 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
+<!--- ICS2O-My second PWA -->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="My second PWA" />
+    <meta name="keywords" content="mths, ics2o" />
+    <meta name="author" content="Zaida Hammel" />
+    <meta name="theme-color" content="#FFFFFF" />
+    <title>GitHub page as PWA template</title>
+    <link rel="canonical" href="https://zaida-hammel.github.io/ICS2O-PWA-Test-1/" />
+    <link rel="manifest" href="/ICS2O-PWA-Test-1/manifest.webmanifest" />
+    <link rel="stylesheet" href="./css/style.css"/>
+    <!--- None blocking for Lighthouse report -->
+    <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-green.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-green.min.css"></noscript>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+  </head>
 
 <body>
-  Hello world
-  <script src="script.js"></script>
-</body>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">Volume of a Sphere, with JS</span>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <table>
+          <tr>
+            <th>
+              <img src="./images/sphere.png" alt="sphere" width="auto" height="auto" />
+            </th>
+            <th>
+              <h5>V = 3/4πr³</h5>
+            </th>
+          </tr>
+        </table>
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <p>Radius:</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="number"
+              step=".01"
+              id="radius-of-sphere"
+            />
+            <label class="mdl-textfield__label" for="radius-of-sphere">radius...</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+        <!-- Raised button with ripple -->
+        <button
+          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="calculate()"
+        >
+          Calculate
+        </button>
+        <br />
+        <p>
+          <div id="answers">
+            <div id="volume"
+              step=".01">
+            </div>
+          </div>
+        </p>
+      </main>
+    </div>
+  </body>
 
 </html>
