--- a/index.html
+++ b/index.html
@@ -23,53 +23,45 @@
 
 <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js"></script>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Volume of a Sphere, with JS</span>
+    <div class = "mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class = "mdl-layout__header">
+        <div class = "mdl-layout__header-row">      
+          <span class = "mdl-layout-title">Volume of a sphere</span>
         </div>
       </header>
-      <main class="mdl-layout__content">
+      <main class = "mdl-layout__content">
+        <br>
+        <br>
         <table>
           <tr>
             <th>
-              <img src="./images/sphere.png" alt="sphere" width="auto" height="auto" />
+              <img src="./images/sphere.png" align="right" alt="sphere" width="75%" height="auto" />
             </th>
             <th>
-              <h5>V = 3/4πr³</h5>
+              <h3>Formula</h3>
+              <h4>V= 4/3πr³</h4>
             </th>
           </tr>
         </table>
         <!-- Numeric Textfield -->
         <form action="#">
-          <p>Radius:</p>
+          <p>Radius</p>
           <div class="mdl-textfield mdl-js-textfield">
-            <input
-              class="mdl-textfield__input"
-              type="number"
-              step=".01"
-              id="radius-of-sphere"
-            />
-            <label class="mdl-textfield__label" for="radius-of-sphere">radius...</label>
+            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="radius">
+            <label class="mdl-textfield__label" for="base-A">Enter radius</label>
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
         </form>
+        
         <!-- Raised button with ripple -->
-        <button
-          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="calculate()"
-        >
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="calculate()">
           Calculate
         </button>
-        <br />
-        <p>
-          <div id="answers">
-            <div id="volume"
-              step=".01">
-            </div>
-          </div>
-        </p>
+        <br>
+        <br>
+          <div id="volume"></div>
       </main>
     </div>
   </body>
