--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Zaida Hammel" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>GitHub page as PWA template</title>
-    <link rel="canonical" href="https://zaida-hammel.github.io/ICS2O-PWA-Test-1/" />
+    <link rel="canonical" href="https://zaida-hammel.github.io/ICS2O-PWA-Test-extra/" />
     <link rel="manifest" href="/ICS2O-PWA-Test-1/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/style.css"/>
     <!--- None blocking for Lighthouse report -->
